@@ -13,4 +13,5 @@ REDHAT_BUGZILLA=670079,671063
 - Refactoring ManageMaintainerTargets.
 - fedpkg and koji build for every branches are revealed.
 - Now set rawhide as f16, release dists are f15,f14,f13.
+- rpm build process is now refined, no unnecessary build.
 
